# crl_pond_segmentation

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/: opi_detection_node.hpp  opi_localization_node.hpp  opi_tracker_node.hpp  pond_segmentation_node.hpp
launch/: opi.launch.py  pond_segmentation.launch.py
msg/: TrackedPose.msg  TrackedPoseArray.msg
scripts/: .gitignore  README.md  evaluate.py  export_onnx.py  merge_data.py  pyproject.toml  train.py
src/: opi_detection_node.cpp  opi_localization_node.cpp  opi_tracker_node.cpp  pond_segmentation_node.cpp
