<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pond_segmentation</name>
  <version>0.1.0</version>
  <description>
    YOLOv11n-seg pond water segmentation node for ROS 2.
    Subscribes to one or more camera image topics, runs ONNX inference,
    and publishes a binary mono8 segmentation mask.
  </description>
  <maintainer email="herolada@fel.cvut.cz">Adam Herold</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>libopencv-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
