[project]
name = "my-project"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "ultralytics",
    "tensorboard",
    "onnx",
    "onnxruntime",
    "torch",
    "torchvision",
]

[tool.uv]
prerelease = "allow"

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }