[project]
name = "my-project"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "ultralytics==8.4.60",
    "tensorboard",
    "onnx",
    "onnxruntime",
    "torch==2.5.1",
    "torchvision==0.20.1",
]

[tool.uv]
index-url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }